# quiz-app

./: .codewatchrc  .env  .env.example  .gitattributes  .gitignore  .tasks.json  Dockerfile  Makefile  Minnesota_Driving_Quiz.csv  README.md  TESTING.md  TODO.md  codebase.md  docker-compose.yml  manage.sh  nginx.conf  serve  setup-env.sh  wait-for-it.sh
quiz-app-backend/: .env  Cargo.toml  README.md  prepare.sh  run_migrations.sh  run_seeder.sh
quiz-app-backend/.sqlx/: query-0d09e64f07395abb21b675f86d1aafa8b4f0257540671dfdeb818f3be16ce1af.json  query-0f70efe7df28772aa35271d6374308e6d3890314f827a7fdca1d0a8db5d38abb.json  query-11833e12158e492e6e2e9a08a1af0b9f3b86b6b2836689782e045bdaa27fbe88.json  query-1ba15c82ac34806fd816b38ef7825071074735233000573f53fc02b73fe101e4.json  query-29940ee7030fc97ca831eeb481465e3fa4f2795da7a4a6810bf38b5461c237d6.json  query-2b8b222307e37e64f4459a3a7da050fcb6ce97b5e5b2aa0bf2cf278806060768.json  query-2f14c2482b4b5aa1a6c521f80f64abde774c589dd2627ce506694e2598e5034b.json  query-36fea1dec8a1e9747ff80ac30143d71651fea5f7dd069e016316db2a8e83e213.json  query-3ea969b6219f7e476744e6b8ba255bdb6b91fcd0b685a08a069b583d27081068.json  query-497b14484b8b452c6e1572caa8ef2edcdc72ae5217cea0a34e39df00bd5d729d.json  query-50224d6cf0874a4266b1e10a9003efd1f8c947b7a391dbbdcfdc1ed2ab906a0f.json  query-50e6a96bd8c86372ec28b3b027b19eff60287f30b83208ed384424ebd5c42547.json  query-534db52238e91ae4f1ede878416be57370a87e3a3b75972e3f1d3c52e2d06f17.json  query-599f5b932c679f9f1cbf579417c6faba7e4c50ed1ae568e11873add887a0ef2f.json  query-64de2c496b8f41ee11c4e1a24d82aa48a16c477e8019572002508d483c104674.json  query-65745a95c3a49feb371990e7d94ffc061eb83f56885051c4da62c48beba0d073.json  query-6b993687c07ac4d2c70c5b647a5de49ab562837a9a4022f9ec43ce3bcbe969eb.json  query-6defad0d098b72bf141adc4c32237244ce333e5342d23cc1faa7d26560fd09bf.json  query-7230d87f38bedb0077a50b36db619bdd8b285e0db5096fac4785082473ee8624.json  query-73eeb0bcecabf428fc2beb9d8fad8cfb17500cc0d9d2e819d28e028e8c18bca7.json  query-7e44776ea84d48bfa1935fe6af6ccc55d7f6a75762173ecec69fb1235ce14764.json  query-7f83025af9f13d21f915f11cb7c7d0208b4f7d995909f8844634f8cbb3d4094c.json  query-8211b1e6230de5ef4815732a72f7eaba03b7056e906d62189787a59b079ca5a3.json  query-843923b9a0257cf80f1dff554e7dc8fdfc05f489328e8376513124dfb42996e3.json  query-848369ecc1e7151ce42db64034b0bfd8f8f5d985ebe74eda2c16336910e75474.json  query-86e942ccd55a1bd67872ce0f5f62e00f5c1293bc6c3a02ef87bf94f9cf8e1dae.json  query-89e80f6b110c8d91a257c9acd4baa8f2f59f6333660676beb2878aa5a3485d2e.json  query-8c3bf613ba82c5502a2274b380df2734098a8226195c95cc4e5e732a2f6840e4.json  query-900b2478a91719e6f8cce2c5e6f9b8e8881cf2e64ee057c250041666609925e7.json  query-93b9f4480d88b5cff07cd02a2ecc61d52da96df76584050a4c18471608a5ebd2.json  query-9e4cda5ac3ad3466ff662e805472ff3f45111acafccdf15674c358ebca3c5e18.json  query-a18646bcf72345796696e886c2384c9083d11c22fb94e5de313ddf60d3af1a27.json  query-b0da9756e6415a350702db787bdcbacd02bce66f6683c4fbbc63641150783f39.json  query-b1a30dffd394f708c0eecff11a6a4faee48cf37415f7cff3d80652ee080ceafa.json  query-b9ffe941de864fb7646a559926c6e4b29dce07aaf3baef99d90f5fc11ed76414.json  query-bae9fd94e339fa2a572b318c14e73c44ff9cbf96ff122b5d9171fb26ae94d042.json  query-c0b6c30b0d1915bb4af51b3dc5e92b3bad8785034614cd3e8e32a888b8bb2a99.json  query-c30f235fc9307f5390a1fd329e2d03e488940d69c9d4776c4ec29bed89005060.json  query-c7cd86cac654893d191f345f430afff3521e15a89747ecec461433f462e46fe1.json  query-cac2ae5e455fc75839a825cc1f3bcfb328dfd31ee97b36242cb7b56ab11fb63f.json  (+13 more)
quiz-app-backend/data/: dmv_quiz.json
quiz-app-backend/migrations/: 20231201000000_create_users.sql  20231212000000_initial_schema.sql  20240114000001_create_users.sql  20240114000002_create_quizzes.sql  (+9 more)
(+116 files in other folders)
