[package]
name = "quiz-app-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.6"
actix-web-httpauth = "0.8"
actix-http = "3.3"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-native-tls", "postgres", "time", "chrono", "uuid"] }
derive_more = "0.99.16"
tokio = { version = "1.29", features = ["full"] }
dotenv = "0.15"
env_logger = "0.10"
log = "0.4"
jsonwebtoken = "=8.3.0"
bcrypt = "=0.10.0"
uuid = { version = "1.4", features = ["v4", "serde"] }  # Remove sqlx feature, as it's not needed
futures = "0.3"
thiserror = "1.0"
async-trait = "0.1"
lru = "0.12.2"  # For LRU cache implementation
idna = "=0.4.0"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.11"
rand = "0.8"
actix-rt = "2.8"
actix-service = "2.0"

[[bin]]
name = "quiz-app-backend"
path = "src/main.rs"
